--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <header>
-      <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid" style="justify-content: center;">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img src="../assets/icons/logo.png" alt="logo" class="logo"
           /></a>
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link item" aria-current="page" href="/index.html"
+                <a class="nav-link item active" aria-current="page" href="/index.html"
                   >INICIO</a
                 >
               </li>
@@ -51,8 +51,9 @@
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
+                  
                 >
-                  Categorías
+                  CATEGORÍAS
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Anillos</a></li>
@@ -75,14 +76,19 @@
                 >
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link item active" href="/pages/login.html"
-                  >Unirme</a
+              <li class="nav-item" id="nav-unirme">
+                <a class="nav-link item" href="/pages/login.html"
+                  >UNIRME</a
+                >
+              </li>
+              <li class="nav-item" id="nav-salir">
+                <a class="nav-link item "
+                  >SALIR</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link item active" href="/pages/login.html"
-                  >Carrito</a
+                <a class="nav-link item" href="/pages/verCarrito.html"
+                  >CARRITO</a
                 >
               </li>
             </ul>
@@ -124,15 +130,7 @@
         <h3><small>Nuestras</small></h3>
         <h2><b>CATEGORÍAS</b></h2>
         <br />
-        <section class="lista-categorias">
-          <div class="item categoria1"></div>
-          <div class="item categoria2"></div>
-          <div class="item categoria3"></div>
-          <div class="item categoria4"></div>
-          <div class="item categoria5"></div>
-          <div class="item categoria6"></div>
-          <div class="item categoria7"></div>
-          <div class="item categoria8"></div>
+        <section id="lista-categorias" class="lista-categorias">
         </section>
       </section>
 
@@ -188,12 +186,10 @@
       </section>
     </main>
 
+    <div id="toast" class="toast hide"></div>
     <div id="scroll-top" class="scroll-top">Top</div>
   </body>
-  <!-- 
-  <script type="module" src="js/main.js"></script>
 
- -->
   <script type="module" src="../js/index.js"></script>
   <script type="module" src="js/buscar.js"></script>
   <script src="../js/jquery.min.js"></script>
