--- a/pages/registrar.html
+++ b/pages/registrar.html
@@ -43,11 +43,6 @@
                   >INICIO</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link item" aria-current="page" href="/index.html"
-                  >OFERTAS</a
-                >
-              </li>
               <li class="nav-item dropdown item">
                 <a
                   class="nav-link dropdown-toggle"
@@ -57,7 +52,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Categorías
+                  CATEGORÍAS
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Anillos</a></li>
@@ -80,14 +75,19 @@
                 >
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link item active" href="/pages/login.html"
-                  >Unirme</a
+              <li class="nav-item" id="nav-unirme">
+                <a class="nav-link item active"
+                  >UNIRME</a
+                >
+              </li>
+              <li class="nav-item" id="nav-salir">
+                <a class="nav-link item "
+                  >SALIR</a
                 >
               </li>
               <li class="nav-item">
                 <a class="nav-link item" href="/pages/verCarrito.html"
-                  >Carrito</a
+                  >CARRITO</a
                 >
               </li>
             </ul>
@@ -180,6 +180,7 @@
           </div>
         </div>
       </section>
+    <div id="toast" class="toast hide"></div>
     </main>
   </body>
   <script type="module" src="../js/registrar.js"></script>
