--- a/pages/verProducto.html
+++ b/pages/verProducto.html
@@ -43,21 +43,17 @@
                   >INICIO</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link item" aria-current="page" href="/index.html"
-                  >OFERTAS</a
-                >
-              </li>
               <li class="nav-item dropdown item">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
+                  
                 >
-                  Categorías
+                  CATEGORÍAS
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Anillos</a></li>
@@ -80,14 +76,19 @@
                 >
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link item active" href="/pages/login.html"
-                  >Unirme</a
+              <li class="nav-item" id="nav-unirme">
+                <a class="nav-link item"
+                  >UNIRME</a
+                >
+              </li>
+              <li class="nav-item" id="nav-salir">
+                <a class="nav-link item "
+                  >SALIR</a
                 >
               </li>
               <li class="nav-item">
                 <a class="nav-link item" href="/pages/verCarrito.html"
-                  >Carrito</a
+                  >CARRITO</a
                 >
               </li>
             </ul>
@@ -98,7 +99,6 @@
 
     <main>
       <section class="producto">
-        
       </section>
     </main>
   </body>
